# libbase

./: .clang-format  .gitignore  CMakeLists.txt  chrono_utils.cpp  hex.cpp  mapped_file.cpp  parsebool.cpp  parsenetaddress.cpp  posix_strerror_r.cpp  readme.txt  stringprintf.cpp  strings.cpp  threads.cpp  utf8.cpp
include/libbase/: chrono_utils.h  errno_restorer.h  hex.h  macros.h  mapped_file.h  off64_t.h  parsebool.h  parsenetaddress.h  stringprintf.h  strings.h  threads.h  unique_fd.h  utf8.h
